--- a/changelog_unreleased/mdx/12208.md
+++ b/changelog_unreleased/mdx/12208.md
@@ -5,7 +5,6 @@ Adds support for using Markdown [range ignore](https://prettier.io/docs/en/ignor
 <!-- prettier-ignore -->
 ```mdx
 // Input
-
 {/* prettier-ignore-start */}
 
 export const Hello = () => {
@@ -16,29 +15,9 @@ export const Hello = () => {
 {/* prettier-ignore-end */}
 
 // Prettier stable (throws an error)
-
-k@https://prettier.io/lib/standalone.js:7:18850
-S@https://prettier.io/lib/standalone.js:7:18770
-k@https://prettier.io/lib/standalone.js:7:18839
-S@https://prettier.io/lib/standalone.js:7:18770
-k@https://prettier.io/lib/standalone.js:7:18839
-S@https://prettier.io/lib/standalone.js:7:18770
-l@https://prettier.io/lib/standalone.js:7:18716
-I@https://prettier.io/lib/standalone.js:7:21775
-G@https://prettier.io/lib/standalone.js:97:3694
-h@https://prettier.io/lib/standalone.js:41:11604
-b@https://prettier.io/lib/standalone.js:41:11128
-A@https://prettier.io/lib/standalone.js:41:10958
-c@https://prettier.io/lib/standalone.js:41:10868
-b@https://prettier.io/lib/standalone.js:41:15183
-D@https://prettier.io/lib/standalone.js:45:576
-St/<@https://prettier.io/lib/standalone.js:115:7299
-formatCode@https://prettier.io/worker.js:141:21
-handleMessage@https://prettier.io/worker.js:78:36
-self.onmessage@https://prettier.io/worker.js:36:14
+TypeError: Cannot read properties of undefined (reading 'type')
 
 // Prettier main
-
 {/* prettier-ignore-start */}
 
 export const Hello = () => {
