Update the changelog

--- a/changelog_unreleased/cli/12561.md
+++ b/changelog_unreleased/cli/12561.md
@@ -1,6 +1,6 @@
 #### Print the number of files that need formatting. (#12561 by @Harry-Hopkinson)
 
-## Description
+<!-- Optional description if it makes sense. -->
 
 This change prints the number of files that need to be changed in order to match the Prettier Code Style.
 
@@ -24,16 +24,18 @@ Code style issues found in 3 files. Forgot to run Prettier?
 
 This is in contrast to the previous
 
-```shell
+````shell
 Code style issues fixed in the above file(s). Forgot to run Prettier?
 ```
 
-## Checklist
+<!-- prettier-ignore -->
+```jsx
+// Input
+(foo ?? baz) || baz;
 
-<!-- Please ensure you’ve done all of these things (if applicable). -->
-<!-- You can replace the `[ ]` with `[x]` to mark each task as done. -->
+// Prettier stable
+foo ?? baz || baz;
 
-- [x] I’ve added tests to confirm my change works.
-- [x] (If changing the API or CLI) I’ve documented the changes I’ve made (in the `docs/` directory).
-- [x] (If the change is user-facing) I’ve added my changes to `changelog_unreleased/*/XXXX.md` file following `changelog_unreleased/TEMPLATE.md`.
-- [x] I’ve read the [contributing guidelines](https://github.com/prettier/prettier/blob/main/CONTRIBUTING.md).
+// Prettier main
+(foo ?? baz) || baz;
+````
