--- a/changelog_unreleased/cli/12561.md
+++ b/changelog_unreleased/cli/12561.md
@@ -1,41 +1,25 @@
 #### Print the number of files that need formatting. (#12561 by @Harry-Hopkinson)
 
-<!-- Optional description if it makes sense. -->
-
 This change prints the number of files that need to be changed in order to match the Prettier Code Style.
 
 For example if you
 
-```shell
-prettier --check <a directory>
+```console
+# Prettier stable
+$ prettier --check src --check
+Checking formatting...
+[warn] 1.js
+[warn] Code style issues found in the above file(s). Forgot to run Prettier?
+
+# Prettier main
+$ prettier --check src --check
+Checking formatting...
+[warn] 1.js
+[warn] 2.js
+[warn] Code style issues found in 2 files. Forgot to run Prettier?
+
+$ prettier --check src --check
+Checking formatting...
+[warn] 1.js
+[warn] Code style issues found in the above file. Forgot to run Prettier?
 ```
-
-Now if one file needs to be changed it prints out.
-Code style issues found in the above file. Forgot to run Prettier?
-
-Instead of
-Code style issues found in the above file(s). Forgot to run Prettier?
-
-Another change is it now prints out the number of files that need to be formatted. For example if you have three files that need to be formatted in a directory it now outputs the number of files that need to change.
-
-```shell
-Code style issues found in 3 files. Forgot to run Prettier?
-```
-
-This is in contrast to the previous
-
-````shell
-Code style issues fixed in the above file(s). Forgot to run Prettier?
-```
-
-<!-- prettier-ignore -->
-```jsx
-// Input
-(foo ?? baz) || baz;
-
-// Prettier stable
-foo ?? baz || baz;
-
-// Prettier main
-(foo ?? baz) || baz;
-````
