--- a/changelog_unreleased/cli/12561.md
+++ b/changelog_unreleased/cli/12561.md
@@ -1,6 +1,6 @@
-#### Print the number of files that need formatting. (#12561 by @Harry-Hopkinson)
+#### Print the number of files that need formatting (#12561 by @Harry-Hopkinson)
 
-This change prints the number of files that need to be changed in order to match the Prettier Code Style.
+Prints the number of files that need to be changed in order to match the Prettier Code Style.
 
 ```console
 # Prettier stable
