--- a/changelog_unreleased/cli/12561.md
+++ b/changelog_unreleased/cli/12561.md
@@ -1,6 +1,4 @@
-#### Print the number of files that need formatting (#12561 by @Harry-Hopkinson)
-
-Prints the number of files that need to be changed in order to match the Prettier Code Style.
+#### Print the number of files that need change (#12561 by @Harry-Hopkinson)
 
 ```console
 # Prettier stable
