--- a/changelog_unreleased/cli/12561.md
+++ b/changelog_unreleased/cli/12561.md
@@ -1,4 +1,4 @@
-#### Print the number of files that need change (#12561 by @Harry-Hopkinson)
+#### Print the number of files need change (#12561 by @Harry-Hopkinson)
 
 ```console
 # Prettier stable
