--- a/changelog_unreleased/cli/12561.md
+++ b/changelog_unreleased/cli/12561.md
@@ -2,19 +2,19 @@
 
 ```console
 # Prettier stable
-$ prettier --check src --check
+$ prettier src --check
 Checking formatting...
 [warn] 1.js
 [warn] Code style issues found in the above file(s). Forgot to run Prettier?
 
 # Prettier main
-$ prettier --check src --check
+$ prettier src --check
 Checking formatting...
 [warn] 1.js
 [warn] 2.js
 [warn] Code style issues found in 2 files. Forgot to run Prettier?
 
-$ prettier --check src --check
+$ prettier src --check
 Checking formatting...
 [warn] 1.js
 [warn] Code style issues found in the above file. Forgot to run Prettier?
