--- a/changelog_unreleased/cli/12561.md
+++ b/changelog_unreleased/cli/12561.md
@@ -4,18 +4,18 @@
 # Prettier stable
 $ prettier src --check
 Checking formatting...
-[warn] 1.js
+[warn] src/fileA.js
 [warn] Code style issues found in the above file(s). Forgot to run Prettier?
 
 # Prettier main
 $ prettier src --check
 Checking formatting...
-[warn] 1.js
-[warn] 2.js
+[warn] src/fileA.js
+[warn] src/fileB.js
 [warn] Code style issues found in 2 files. Forgot to run Prettier?
 
 $ prettier src --check
 Checking formatting...
-[warn] 1.js
+[warn] src/fileA.js
 [warn] Code style issues found in the above file. Forgot to run Prettier?
 ```
