--- a/changelog_unreleased/graphql/12608.md
+++ b/changelog_unreleased/graphql/12608.md
@@ -1,9 +1,14 @@
-#### Fix description markdown formatting (#12608 by @chimurai)
+#### Fix single line and empty description formatting (#12608 by @chimurai, @fisker)
 
 <!-- prettier-ignore -->
 ```graphql
 # Input
 """ Customer """
+type Person {
+  name: String
+}
+
+""""""
 type Person {
   name: String
 }
@@ -16,6 +21,28 @@ type Person {
   name: String
 }
 
+"""
+
+"""
+type Person {
+  name: String
+}
+
+# Prettier 2.6.2 (second format)
+"""
+Customer
+"""
+type Person {
+  name: String
+}
+
+"""
+
+"""
+type Person {
+  name: String
+}
+
 # Prettier main
 """
 Customer
@@ -23,62 +50,10 @@ Customer
 type Person {
   name: String
 }
-```
 
-````graphql
-# Input
 """
-## Example Request
-
-```graphql
-query{a}
-```
-
-## Example Response
-
-```json
-{"a":42}
-```
 """
-type Query {
-  a: Number!
-}
-
-# Prettier 2.6.2
-"""
-## Example Request
-
-```graphql
-query{a}
-```
-
-## Example Response
-
-```json
-{"a":42}
-```
-"""
-type Query {
-  a: Number!
-}
-
-# Prettier main
-"""
-## Example Request
-
-```graphql
-query {
-  a
+type Person {
+  name: String
 }
 ```
-
-## Example Response
-
-```json
-{ "a": 42 }
-```
-"""
-type Query {
-  a: Number!
-}
-````
