--- a/changelog_unreleased/cli/12682.md
+++ b/changelog_unreleased/cli/12682.md
@@ -1,3 +1,6 @@
-#### Skip print code or write file when performance flags found (#12682 by @fisker)
+#### Simplify performance test (#12682, #12698 by @fisker)
 
-When `--debug-benchmark` or `--debug-repeat` is used, the CLI will skip print the formatted code to the screen or write files.
+When `--debug-benchmark` or `--debug-repeat` is passed:
+
+1. The CLI skips print code to the screen or write file
+1. Set log level to `debug` automatically
