--- a/changelog_unreleased/api/12574.md
+++ b/changelog_unreleased/api/12574.md
@@ -1,4 +1,4 @@
-#### [BREAKING] Change public apis to asynchronous (#XXXX by @user)
+#### [BREAKING] Change public apis to asynchronous (#12574 by @fisker)
 
 - `prettier.format()` returns `Promise<string>`
 - `prettier.formatWithCursor()` returns `Promise<{formatted: string, cursorOffset: number}>`
