--- a/changelog_unreleased/api/12748.md
+++ b/changelog_unreleased/api/12748.md
@@ -4,4 +4,4 @@
 
 <!-- TODO: Discuss this before v3 release -->
 
-Note: Since [`embed` function](https://prettier.io/docs/en/plugins.html#optional-embed) are still sync, so the async parsers can't be used.
+Note: Since [`embed` functions in plugin](https://prettier.io/docs/en/plugins.html#optional-embed) are still sync, plugins with async parser can't be used to format embed code.
