--- a/changelog_unreleased/api/12574.md
+++ b/changelog_unreleased/api/12574.md
@@ -1,8 +1,9 @@
-#### [BREAKING] Change public apis to asynchronous (#12574, #12788 by @fisker)
+#### [BREAKING] Change public apis to asynchronous (#12574, #12788, #12790 by @fisker)
 
 - `prettier.format()` returns `Promise<string>`
 - `prettier.formatWithCursor()` returns `Promise<{formatted: string, cursorOffset: number}>`
 - `prettier.check()` returns `Promise<boolean>`
+- `prettier.getSupportInfo()` returns `Promise`
 - `prettier.resolveConfig.sync` is removed
 - `prettier.resolveConfigFile.sync` is removed
 - `prettier.getFileInfo.sync` is removed
