Adding changelog real-world use case

--- a/changelog_unreleased/javascript/12779.md
+++ b/changelog_unreleased/javascript/12779.md
@@ -1,5 +1,7 @@
 #### Make more callee patterns recognized as "test call callee". (#12779 by @HosokawaR)
 
+Supports test calls like [Playwright `test.describe`](https://playwright.dev/docs/api/class-test#test-describe).
+
 <!-- prettier-ignore -->
 ```jsx
 // Input
