Remove `cache-location`

--- a/changelog_unreleased/cli/12800.md
+++ b/changelog_unreleased/cli/12800.md
@@ -1,4 +1,4 @@
-#### Add new `--cache` and `--cache-location` (#12800 by @sosukesuzuki)
+#### Add new `--cache` (#12800 by @sosukesuzuki)
 
 Two new CLI options have been added for a caching system similar to [ESLint's one](https://eslint.org/docs/user-guide/command-line-interface#caching). Please see the [documentation](https://prettier.io/docs/en/cli.html#--cache) for details.
 
@@ -8,16 +8,4 @@ When you want to format only changed files, you can run Prettier with `--cache` 
 
 ```bash
 prettier --write --cache src
-```
-
-##### `--cache-location`
-
-Path to the cache file or directory location used by `--cache` flag. If you don't explicit `--cache-location`, Prettier saves cache file at `./node_modules/.cache/prettier/.prettiercache`.
-
-```bash
-prettier --write --cache --cache-location=my_cache_file src
-```
-
-```bash
-prettier --write --cache --cache-location=my_cache_dir/ src
 ```
