--- a/changelog_unreleased/cli/12800.md
+++ b/changelog_unreleased/cli/12800.md
@@ -1,4 +1,4 @@
-#### Add new `--cache` (#12800 by @sosukesuzuki)
+#### Add `--cache` CLI option (#12800 by @sosukesuzuki)
 
 Two new CLI options have been added for a caching system similar to [ESLint's one](https://eslint.org/docs/user-guide/command-line-interface#caching). Please see the [documentation](https://prettier.io/docs/en/cli.html#--cache) for details.
 
@@ -8,4 +8,12 @@ When you want to format only changed files, you can run Prettier with `--cache` 
 
 ```bash
 prettier --write --cache src
+```
+
+##### `--cache-strategy`
+
+Strategy for the cache to use for detecting changed files. Can be either `metadata` or `content`. If no strategy is specified, metadata will be used.
+
+```bash
+prettier --write --cache --cache-strategy content src
 ```
