--- a/changelog_unreleased/typescript/12896.md
+++ b/changelog_unreleased/typescript/12896.md
@@ -1,4 +1,4 @@
-#### [HIGHLIGHT]Support TypeScript 4.7 (#12896, #12897, #12898, #12900 by @sosukesuzuki)
+#### [HIGHLIGHT]Support TypeScript 4.7 (#12896, #12897, #12898, #12900, #12921, #12924 by @sosukesuzuki)
 
 Support [TypeScript 4.7](https://devblogs.microsoft.com/typescript/announcing-typescript-4-7) new features!
 
