--- a/website/blog/2019-04-12-1.17.0.md
+++ b/website/blog/2019-04-12-1.17.0.md
@@ -84,6 +84,16 @@ If you don't want to use `package.json`, you can use any of the supported extens
 > };
 > ```
 
+> Note: You can also import the file in a `.prettierrc.ts` and export the modifications.
+>
+> ```ts
+> module.exports = {
+>   ...require("@company/prettier-config"),
+>   semi: false,
+> };
+> ``;
+> ```
+
 ## General
 
 ### JavaScript
