--- a/changelog_unreleased/cli/12800.md
+++ b/changelog_unreleased/cli/12800.md
@@ -1,6 +1,6 @@
-#### Add `--cache` CLI option (#12800 by @sosukesuzuki)
+#### Add `--cache` and `--cache-strategy` CLI option (#12800 by @sosukesuzuki)
 
-Two new CLI options have been added for a caching system similar to [ESLint's one](https://eslint.org/docs/user-guide/command-line-interface#caching). Please see the [documentation](https://prettier.io/docs/en/cli.html#--cache) for details.
+Two new CLI options have been added for a caching system similar to [ESLint's one](https://eslint.org/docs/user-guide/command-line-interface#caching).
 
 ##### `--cache`
 
