--- a/changelog_unreleased/cli/12800.md
+++ b/changelog_unreleased/cli/12800.md
@@ -4,7 +4,12 @@ Two new CLI options have been added for a caching system similar to [ESLint's on
 
 ##### `--cache`
 
-When you want to format only changed files, you can run Prettier with `--cache` flag. Enabling this flag can dramatically improve running time.
+If this option is enabled, the following values are used as cache keys and the file is formatted only if one of them is changed.
+
+- Options
+- Node.js version
+- (if `--cache-strategy` is `metadata`) file metadata, such as timestamps
+- (if `--cache-strategy` is `content`) content of the file
 
 ```bash
 prettier --write --cache src
@@ -12,7 +17,7 @@ prettier --write --cache src
 
 ##### `--cache-strategy`
 
-Strategy for the cache to use for detecting changed files. Can be either `metadata` or `content`. If no strategy is specified, metadata will be used.
+Strategy for the cache to use for detecting changed files. Can be either `metadata` or `content`. If no strategy is specified, `metadata` will be used.
 
 ```bash
 prettier --write --cache --cache-strategy content src
