--- a/changelog_unreleased/cli/12800.md
+++ b/changelog_unreleased/cli/12800.md
@@ -1,4 +1,4 @@
-#### [HIGILIGHT]Add `--cache` and `--cache-strategy` CLI option (#12800 by @sosukesuzuki)
+#### [HIGHLIGHT]Add `--cache` and `--cache-strategy` CLI option (#12800 by @sosukesuzuki)
 
 Two new CLI options have been added for a caching system similar to [ESLint's one](https://eslint.org/docs/user-guide/command-line-interface#caching).
 
