--- a/changelog_unreleased/typescript/12982.md
+++ b/changelog_unreleased/typescript/12982.md
@@ -9,7 +9,7 @@ const object = ({ methodName() });
 const object = { methodName(); };
 
 // Prettier main
-SyntaxError: Unexpected token. (1:28)
-> 1 | const object = { methodName(); };
-    |                            ^^^
+SyntaxError: Unexpected token. (1:29)
+> 1 | const object = ({ methodName() });
+    |                             ^^
 ```
