--- a/website/blog/2022-06-10-2.7.0.md
+++ b/website/blog/2022-06-10-2.7.0.md
@@ -20,6 +20,7 @@ Support [TypeScript 4.7](https://devblogs.microsoft.com/typescript/announcing-ty
 
 ##### [Instantiation Expressions](https://devblogs.microsoft.com/typescript/announcing-typescript-4-7/#instantiation-expressions)
 
+<!-- prettier-ignore -->
 ```ts
 interface Box<T> {
   value: T;
@@ -33,6 +34,7 @@ const makeWrenchBox = makeBox<Wrench>;
 
 ##### [Optional Variance](https://devblogs.microsoft.com/typescript/announcing-typescript-4-7/#optional-variance-annotations-for-type-parameters)
 
+<!-- prettier-ignore -->
 ```ts
 interface Animal {
   animalStuff: any;
@@ -46,8 +48,9 @@ type Setter<in T> = (value: T) => void;
 
 ##### [`extends` constraints for `infer`](https://devblogs.microsoft.com/typescript/announcing-typescript-4-7/#extends-constraints-on-infer-type-variables)
 
+<!-- prettier-ignore -->
 ```ts
-type FirstString<T> = T extends [infer extends string, ...unknown[]]
+type FirstString<T> = T extends [infer S extends string, ...unknown[]]
   ? S
   : never;
 ```
