--- a/changelog_unreleased/cli/12800.md
+++ b/changelog_unreleased/cli/12800.md
@@ -6,10 +6,11 @@ Two new CLI options have been added for a caching system similar to [ESLint's on
 
 If this option is enabled, the following values are used as cache keys and the file is formatted only if one of them is changed.
 
+- Prettier version
 - Options
 - Node.js version
-- (if `--cache-strategy` is `metadata`) file metadata, such as timestamps
 - (if `--cache-strategy` is `content`) content of the file
+- (if `--cache-strategy` is `metadata`) file metadata, such as timestamps
 
 ```bash
 prettier --write --cache src
@@ -17,8 +18,8 @@ prettier --write --cache src
 
 ##### `--cache-strategy`
 
-Strategy for the cache to use for detecting changed files. Can be either `metadata` or `content`. If no strategy is specified, `metadata` will be used.
+Strategy for the cache to use for detecting changed files. Can be either `metadata` or `content`. If no strategy is specified, `content` will be used.
 
 ```bash
-prettier --write --cache --cache-strategy content src
+prettier --write --cache --cache-strategy metadata src
 ```
