--- a/changelog_unreleased/cli/12800.md
+++ b/changelog_unreleased/cli/12800.md
@@ -2,6 +2,8 @@
 
 Two new CLI options have been added for a caching system similar to [ESLint's one](https://eslint.org/docs/user-guide/command-line-interface#caching).
 
+Please see [the doc](https://prettier.io/docs/en/cli.html#--cache) for more details.
+
 ##### `--cache`
 
 If this option is enabled, the following values are used as cache keys and the file is formatted only if one of them is changed.
