--- a/changelog_unreleased/html/12882.md
+++ b/changelog_unreleased/html/12882.md
@@ -1,6 +1,6 @@
 #### Support Speculation Rules API formatting in HTML (#12882 by @sosukesuzuki)
 
-Please read https://web.dev/speculative-prerendering/ for about Speculation Rules API.
+Please read https://web.dev/speculative-prerendering/ for more information about the Speculation Rules API.
 
 <!-- prettier-ignore -->
 ```html
