--- a/changelog_unreleased/javascript/12860.md
+++ b/changelog_unreleased/javascript/12860.md
@@ -1,6 +1,6 @@
 #### Fix comment formats in (#12860 by @HosokawaR)
 
-This change fixes comments format in `exports` to algin with the comment format in `import`
+This change fixes the comment format in `exports` to align with the comment format in `import`.
 
 Although this change does not affect the comments format in `import`, follows change log contains examples of comments in `import` for reference.
 
