--- a/changelog_unreleased/typescript/12896.md
+++ b/changelog_unreleased/typescript/12896.md
@@ -16,7 +16,7 @@ const makeHammerBox = makeBox<Hammer>;
 const makeWrenchBox = makeBox<Wrench>;
 ```
 
-##### [Optional Variance](https://devblogs.microsoft.com/typescript/announcing-typescript-4-7/#optional-variance-annotations-for-type-parameters)
+##### [Optional Variance Annotations](https://devblogs.microsoft.com/typescript/announcing-typescript-4-7/#optional-variance-annotations-for-type-parameters)
 
 <!-- prettier-ignore -->
 ```ts
