--- a/website/blog/2022-06-11-2.7.0.md
+++ b/website/blog/2022-06-11-2.7.0.md
@@ -32,7 +32,7 @@ const makeHammerBox = makeBox<Hammer>;
 const makeWrenchBox = makeBox<Wrench>;
 ```
 
-##### [Optional Variance](https://devblogs.microsoft.com/typescript/announcing-typescript-4-7/#optional-variance-annotations-for-type-parameters)
+##### [Optional Variance Annotations](https://devblogs.microsoft.com/typescript/announcing-typescript-4-7/#optional-variance-annotations-for-type-parameters)
 
 <!-- prettier-ignore -->
 ```ts
@@ -57,7 +57,7 @@ type FirstString<T> = T extends [infer S extends string, ...unknown[]]
 
 ### CLI
 
-#### Add `--cache` and `--cache-strategy` CLI option ([#12800](https://github.com/prettier/prettier/pull/12800) by [@sosukesuzuki](https://github.com/sosukesuzuki))
+#### Add `--cache` and `--cache-strategy` CLI options ([#12800](https://github.com/prettier/prettier/pull/12800) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
 Two new CLI options have been added for a caching system similar to [ESLint's one](https://eslint.org/docs/user-guide/command-line-interface#caching).
 
@@ -203,7 +203,7 @@ test.describe.serial
 
 #### Fix comment formats in ([#12860](https://github.com/prettier/prettier/pull/12860) by [@HosokawaR](https://github.com/HosokawaR))
 
-This change fixes comments format in `exports` to algin with the comment format in `import`
+This change fixes the comment format in `exports` to align with the comment format in `import`.
 
 Although this change does not affect the comments format in `import`, follows change log contains examples of comments in `import` for reference.
 
@@ -291,7 +291,7 @@ enum A {
 
 #### Support Speculation Rules API formatting in HTML ([#12882](https://github.com/prettier/prettier/pull/12882) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
-Please read https://web.dev/speculative-prerendering/ for about Speculation Rules API.
+Please read https://web.dev/speculative-prerendering/ for more information about the Speculation Rules API.
 
 <!-- prettier-ignore -->
 ```html
