--- a/website/blog/2022-06-13-2.7.0.md
+++ b/website/blog/2022-06-13-2.7.0.md
@@ -503,7 +503,7 @@ Checking formatting...
 
 #### Infer parser for `.importmap` files ([#12603](https://github.com/prettier/prettier/pull/12603) by [@fisker](https://github.com/fisker))
 
-Format [`.importmap`](https://github.com/WICG/import-maps#import-map-processing) files as a JSON files.
+Format [`.importmap`](https://github.com/WICG/import-maps#import-map-processing) files as JSON files.
 
 #### Simplify performance test ([#12682](https://github.com/prettier/prettier/pull/12682), [#12698](https://github.com/prettier/prettier/pull/12698) by [@fisker](https://github.com/fisker))
 
