--- a/changelog_unreleased/typescript/12896.md
+++ b/changelog_unreleased/typescript/12896.md
@@ -4,6 +4,7 @@ Support [TypeScript 4.7](https://devblogs.microsoft.com/typescript/announcing-ty
 
 ##### [Instantiation Expressions](https://devblogs.microsoft.com/typescript/announcing-typescript-4-7/#instantiation-expressions)
 
+<!-- prettier-ignore -->
 ```ts
 interface Box<T> {
   value: T;
@@ -15,8 +16,9 @@ const makeHammerBox = makeBox<Hammer>;
 const makeWrenchBox = makeBox<Wrench>;
 ```
 
-##### [Optional Variance](https://devblogs.microsoft.com/typescript/announcing-typescript-4-7/#optional-variance-annotations-for-type-parameters)
+##### [Optional Variance Annotations](https://devblogs.microsoft.com/typescript/announcing-typescript-4-7/#optional-variance-annotations-for-type-parameters)
 
+<!-- prettier-ignore -->
 ```ts
 interface Animal {
   animalStuff: any;
@@ -30,8 +32,9 @@ type Setter<in T> = (value: T) => void;
 
 ##### [`extends` constraints for `infer`](https://devblogs.microsoft.com/typescript/announcing-typescript-4-7/#extends-constraints-on-infer-type-variables)
 
+<!-- prettier-ignore -->
 ```ts
-type FirstString<T> = T extends [infer extends string, ...unknown[]]
+type FirstString<T> = T extends [infer S extends string, ...unknown[]]
   ? S
   : never;
 ```
