--- a/changelog_unreleased/graphql/13013.md
+++ b/changelog_unreleased/graphql/13013.md
@@ -1,4 +1,4 @@
-#### Fix between empty lines in description (#13013 by @chimurai)
+#### Keep useful empty lines in description (#13013 by @chimurai)
 
 <!-- prettier-ignore -->
 ```graphql
