--- a/changelog_unreleased/cli/13019.md
+++ b/changelog_unreleased/cli/13019.md
@@ -2,9 +2,13 @@
 
 Path to the cache file or directory location used by `--cache` flag. If you don't explicit `--cache-location`, Prettier saves cache file at `./node_modules/.cache/prettier/.prettier-cache`.
 
+If a file path is passed, that file is used as the cache file.
+
 ```bash
 prettier --write --cache --cache-location=my_cache_file src
 ```
+
+If a directory path is passed, a file with the name hashed process.cwd() is created in that directory and used as a cache file. e.g. For `--cache-location=my_cache_dir/`, cache file: `./foo/.cache_139328449`
 
 ```bash
 prettier --write --cache --cache-location=my_cache_dir/ src
