--- a/changelog_unreleased/cli/13019.md
+++ b/changelog_unreleased/cli/13019.md
@@ -1,6 +1,6 @@
 #### Add `--cache-location` option (#13019 by @sosukesuzuki)
 
-Path to the cache file or directory location used by `--cache` flag. If you don't explicit `--cache-location`, Prettier saves cache file at `./node_modules/.cache/prettier/.prettier-cache`.
+Path to the cache file location used by `--cache` flag. If you don't explicit `--cache-location`, Prettier saves cache file at `./node_modules/.cache/prettier/.prettier-cache`.
 
 If a file path is passed, that file is used as the cache file.
 
