--- a/changelog_unreleased/api/12740.md
+++ b/changelog_unreleased/api/12740.md
@@ -1,4 +1,4 @@
-#### [Breaking] standalone version export style changed (#12740 by @fisker)
+#### [BREAKING] standalone version export style changed (#12740 by @fisker)
 
 The `esm/standalone.mjs` entry has changed export style from default export to named export.
 
