--- a/changelog_unreleased/api/12574.md
+++ b/changelog_unreleased/api/12574.md
@@ -2,6 +2,7 @@
 
 - `prettier.format()` returns `Promise<string>`
 - `prettier.formatWithCursor()` returns `Promise<{formatted: string, cursorOffset: number}>`
+- `prettier.formatAST()` returns `Promise<string>`
 - `prettier.check()` returns `Promise<boolean>`
 - `prettier.getSupportInfo()` returns `Promise`
 - `prettier.resolveConfig.sync` is removed
