--- a/changelog_unreleased/api/12748.md
+++ b/changelog_unreleased/api/12748.md
@@ -2,7 +2,7 @@
 
 [`parse` function](https://prettier.io/docs/en/plugins.html#parsers) in plugin can return a [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise) now.
 
-In order to support async parse, we introduced several breaking changes to the plugin:
+In order to support async parser, we introduced several breaking changes to the plugin system:
 
 The third argument of the [`print`](https://prettier.io/docs/en/plugins.html#print) method of plugin printers (the `print` callback) returns `Promise<Doc>` now.
 
@@ -34,7 +34,7 @@ export const printers = {
 }
 ```
 
-`Promise`s in `AstPath#{each,map}`(aka `path`) are `await`ed.
+`Promise`s returned in callback of `AstPath#{each,map}()`(aka `path`) are `await`ed.
 
 ```js
 path.map((path, index) => Promise.resolve(index));
