--- a/changelog_unreleased/api/11830.md
+++ b/changelog_unreleased/api/11830.md
@@ -1,3 +1,3 @@
-#### [Breaking] Drop support for Node.js 10 (#11830 by @fisker)
+#### [Breaking] Drop support for Node.js 10 and 12 (#11830 by @fisker, #13118 by @sosukesuzuki)
 
-The minimal required Node.js version is v12.17.0
+The minimal required Node.js version is v14.20.0
