Fix format test

--- a/changelog_unreleased/api/13201.md
+++ b/changelog_unreleased/api/13201.md
@@ -2,7 +2,7 @@
 
 Since v3.0.0, we load plugins via `import()` instead of `require()`, plugins can be ESM modules now.
 
-This may break your plugins, if you use `--plugin` by directory path, or file path without extensions.
+If you use `--plugin` by directory path, or file path without extensions, the plugin may not able to load.
 
 ```diff
 - prettier . --plugin=path/to/my-plugin-directory
