--- a/changelog_unreleased/api/12748.md
+++ b/changelog_unreleased/api/12748.md
@@ -1,60 +1,7 @@
-#### [HIGHLIGHT] Support plugin with async parse function (#12748, #13104 by @fisker)
+#### [HIGHLIGHT] Support plugin with async parse function (#12748 by @fisker)
 
 [`parse` function](https://prettier.io/docs/en/plugins.html#parsers) in plugin can return a [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise) now.
 
-In order to support async parser, we introduced several breaking changes to the plugin system:
+<!-- TODO: Discuss this before v3 release -->
 
-The third argument of the [`print`](https://prettier.io/docs/en/plugins.html#print) method of plugin printers (the `print` callback) returns `Promise<Doc>` now.
-
-```diff
-export const printers = {
-  "dance-ast": {
--    print(path, options, print) {
--      return [print("key"), ": ", print("value")];
-+    async print(path, options, print) {
-+      return [await print("key"), ": ", await print("value")];
-    },
-  },
-}
-```
-
-The `print` and `textToDoc` arguments of the [`embed`](https://prettier.io/docs/en/plugins.html#optional-embed) method of plugin printers returns `Promise<Doc>` now.
-
-```diff
-export const printers = {
-  "dance-ast": {
--    embed(path, print, textToDoc, options) {
-+    async embed(path, print, textToDoc, options) {
-      const { text } = path.getValue();
--      const doc = textToDoc(text, {...options, parser: "meriyah"});
-+      const doc = await textToDoc(text, {...options, parser: "meriyah"});
-      return [doc, hardline];
-    },
-  },
-}
-```
-
-`Promise`s returned in callback of `AstPath#{each,map}()`(aka `path`) are `await`ed.
-
-```js
-path.map((path, index) => Promise.resolve(index));
-
-/* Prettier stable */
-// -> [Promise<0>, Promise<1>]
-
-/* Prettier main */
-// -> Promise<[0, 1]>
-```
-
-Note: Due to limitation of `AstPath`, plugin should not try to call `print()` or `textToDoc()` in parallel, it may cause unexpected result.
-
-```js
-/* BAD */
-const [key, value] = await Promise.all(
-  ["key", "value"].map((property) => print(property))
-);
-return [key, ": ", value];
-
-/* GOOD */
-return [await print("key"), ": ", await print("key")];
-```
+Note: Since [`embed` functions in plugin](https://prettier.io/docs/en/plugins.html#optional-embed) are still sync, plugins with async parser can't be used to format embed code.
