Add draft changelog entry

--- a/changelog_unreleased/api/12748.md
+++ b/changelog_unreleased/api/12748.md
@@ -1,7 +1,11 @@
-#### [HIGHLIGHT] Support plugin with async parse function (#12748 by @fisker)
+#### [HIGHLIGHT] Support plugins with async parsers (#12748 by @fisker, #13211 by @thorn0)
 
-[`parse` function](https://prettier.io/docs/en/plugins.html#parsers) in plugin can return a [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise) now.
+[`parse` function](https://prettier.io/docs/en/plugins.html#parsers) in a plugin can return a [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise) now.
 
-<!-- TODO: Discuss this before v3 release -->
+In order to support async parsers, we introduced several non-breaking changes to the plugin system:
 
-Note: Since [`embed` functions in plugin](https://prettier.io/docs/en/plugins.html#optional-embed) are still sync, plugins with async parser can't be used to format embed code.
+- `printer.isNode(node: object): boolean`
+- `printer.detectEmbeddedLanguage(path: AstPath, options: Options): any`
+- `printer.massageAstNode.ignoredProperties: Set<string>`
+
+<!-- TODO -->
