--- a/changelog_unreleased/api/12748.md
+++ b/changelog_unreleased/api/12748.md
@@ -1,11 +1,5 @@
-#### [HIGHLIGHT] Support plugins with async parsers (#12748 by @fisker, #13211 by @thorn0)
+#### [HIGHLIGHT] Support plugins with async parsers (#12748 by @fisker, #13211 by @thorn0 and @fisker)
 
 [`parse` function](https://prettier.io/docs/en/plugins.html#parsers) in a plugin can return a [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise) now.
 
-In order to support async parsers, we introduced several non-breaking changes to the plugin system:
-
-- `printer.isNode(node: object): boolean`
-- `printer.detectEmbeddedLanguage(path: AstPath, options: Options): any`
-- `printer.massageAstNode.ignoredProperties: Set<string>`
-
-<!-- TODO -->
+In order to support async parsers for embedded languages, we had to introduce a breaking change to the plugin API. Namely, `printer.embed` has a completely new signature, incompatible with previous versions. See the [docs](/docs/plugins.html#optional-embed) for details.
