--- a/changelog_unreleased/api/12748.md
+++ b/changelog_unreleased/api/12748.md
@@ -2,4 +2,4 @@
 
 [`parse` function](https://prettier.io/docs/en/plugins.html#parsers) in a plugin can return a [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise) now.
 
-In order to support async parsers for embedded languages, we had to introduce a breaking change to the plugin API. Namely, `printer.embed` has a completely new signature, incompatible with previous versions. See the [docs](/docs/plugins.html#optional-embed) for details.
+In order to support async parsers for embedded languages, we had to introduce a breaking change to the plugin API. Namely, `printer.embed` has a completely new signature, incompatible with previous versions. If you're a plugin author and your plugins don't use `embed`, you have nothing to worry about, otherwise see the [docs](/docs/plugins.html#optional-embed) for details.
