--- a/changelog_unreleased/api/13220.md
+++ b/changelog_unreleased/api/13220.md
@@ -1,5 +1,5 @@
 #### [BREAKING] `textToDoc` trims trailing hard lines (#13130 by @fisker)
 
-Previously, in all core languages, after embeded code printed to `Doc`, we call `prettier.doc.utils.stripTrailingHardline()` to remove the trailing hard lines.
+Previously, in all core languages, after embedded code printed to `Doc`, we call `prettier.doc.utils.stripTrailingHardline()` to remove the trailing hard lines.
 
 We believe make `textToDoc` return docs without trailing hard lines makes the plugins easier to do `embed` print.
