--- a/changelog_unreleased/api/12574.md
+++ b/changelog_unreleased/api/12574.md
@@ -1,7 +1,8 @@
-#### [BREAKING] Change public apis to asynchronous (#12574, #12788, #12790 by @fisker)
+#### [BREAKING] Change public APIs to asynchronous (#12574, #12788, #12790 by @fisker)
 
 - `prettier.format()` returns `Promise<string>`
 - `prettier.formatWithCursor()` returns `Promise<{formatted: string, cursorOffset: number}>`
+- `prettier.formatAST()` returns `Promise<string>`
 - `prettier.check()` returns `Promise<boolean>`
 - `prettier.getSupportInfo()` returns `Promise`
 - `prettier.resolveConfig.sync` is removed
