Make `prettier.clearConfigCache` async

--- a/changelog_unreleased/api/12574.md
+++ b/changelog_unreleased/api/12574.md
@@ -5,6 +5,7 @@
 - `prettier.formatAST()` returns `Promise<string>`
 - `prettier.check()` returns `Promise<boolean>`
 - `prettier.getSupportInfo()` returns `Promise`
+- `prettier.clearConfigCache()` returns `Promise<void>`
 - `prettier.resolveConfig.sync` is removed
 - `prettier.resolveConfigFile.sync` is removed
 - `prettier.getFileInfo.sync` is removed
