--- a/changelog_unreleased/api/12574.md
+++ b/changelog_unreleased/api/12574.md
@@ -1,4 +1,4 @@
-#### [BREAKING] Change public APIs to asynchronous (#12574, #12788, #12790 by @fisker)
+#### [BREAKING] Change public APIs to asynchronous (#12574, #12788, #12790, #13265 by @fisker)
 
 - `prettier.format()` returns `Promise<string>`
 - `prettier.formatWithCursor()` returns `Promise<{formatted: string, cursorOffset: number}>`
