--- a/changelog_unreleased/api/13268.md
+++ b/changelog_unreleased/api/13268.md
@@ -12,7 +12,7 @@ to
 function parse(text: string, options: object): Promise<AST> | AST;
 ```
 
-The second argument `parsers` is removed, if you need other parser during parse process, you can:
+The second argument `parsers` has been removed, if you still need other parser during parse process, you can:
 
 1. Import it your self
 
