--- a/changelog_unreleased/javascript/13157.md
+++ b/changelog_unreleased/javascript/13157.md
@@ -1,9 +1,6 @@
-#### Fix line breaks in multiline strings aren't replaced with literalline and confuse fits (#13157 by @thorn0 )
+#### Fix line breaks in multiline strings aren't replaced with literalline and confuse fits (#13274 by @GlebDolzhikov)
 
 <!-- prettier-ignore -->
-Note that it's not about template literals. It's about normal string literals with escaped line breaks.
-Prettier 2.7.1
-
 Input:
 
 ```js
@@ -26,6 +23,3 @@ const loremIpsumFooBazBar2 =
          Multiline string\
          Multiline string";
 ```
-Expected behavior:
-Formatting style shouldn't change when more lines are added.
-Related: #6501
