--- a/changelog_unreleased/javascript/13157.md
+++ b/changelog_unreleased/javascript/13157.md
@@ -1,9 +1,8 @@
 #### Fix line breaks in multiline strings aren't replaced with literalline and confuse fits (#13274 by @GlebDolzhikov)
 
 <!-- prettier-ignore -->
-Input:
-
-```js
+```jsx
+// Input
 const loremIpsumFooBazBar1 = 'Multiline string\
          Multiline string\
 '
@@ -11,9 +10,20 @@ const loremIpsumFooBazBar1 = 'Multiline string\
 const loremIpsumFooBazBar2 = 'Multiline string\
          Multiline string\
          Multiline string'
-```
-Output:
-```js
+
+// Prettier stable
+const loremIpsumFooBazBar1 =
+  "Multiline string\
+         Multiline string\
+";
+
+const loremIpsumFooBazBar2 =
+  "Multiline string\
+         Multiline string\
+         Multiline string";
+
+
+// Prettier main
 const loremIpsumFooBazBar1 = "Multiline string\
          Multiline string\
 ";
@@ -22,4 +32,5 @@ const loremIpsumFooBazBar2 =
   "Multiline string\
          Multiline string\
          Multiline string";
+
 ```
