Mention `prettier-sync` in changelog

--- a/changelog_unreleased/api/12574.md
+++ b/changelog_unreleased/api/12574.md
@@ -9,3 +9,5 @@
 - `prettier.resolveConfig.sync` is removed
 - `prettier.resolveConfigFile.sync` is removed
 - `prettier.getFileInfo.sync` is removed
+
+If you still need sync APIs, you can try [`prettier-sync`](https://github.com/fisker/prettier-sync)
