fix parens in inferred function return types with `extends`

--- a/changelog_unreleased/typescript/13289.md
+++ b/changelog_unreleased/typescript/13289.md
@@ -1,7 +1,7 @@
-#### Fix range format for function bodies (#13289 by @GlebDolzhikov )
+#### Fix parens in inferred function return types with `extends` (#13289 by @GlebDolzhikov)
 
 <!-- prettier-ignore -->
-```jsx
+```ts
 // Input
 type Foo<T> = T extends (...a: any[]) => (infer R extends string) ? R : never;
 
@@ -9,5 +9,5 @@ type Foo<T> = T extends (...a: any[]) => (infer R extends string) ? R : never;
 type Foo<T> = T extends (...a: any[]) => infer R extends string ? R : never;
 
 // Prettier main
-type Foo<T> = T extends (...a: any[]) => (infer R extends string) ? R : never;
+type Foo<T> = T extends ((...a: any[]) => infer R extends string) ? R : never;
 ```
