Update package name

--- a/changelog_unreleased/api/12574.md
+++ b/changelog_unreleased/api/12574.md
@@ -10,4 +10,4 @@
 - `prettier.resolveConfigFile.sync` is removed
 - `prettier.getFileInfo.sync` is removed
 
-If you still need sync APIs, you can try [`prettier-sync`](https://github.com/fisker/prettier-sync)
+If you still need sync APIs, you can try [`@prettier/sync`](https://github.com/prettier/sync)
