--- a/changelog_unreleased/javascript/13340.md
+++ b/changelog_unreleased/javascript/13340.md
@@ -6,9 +6,11 @@ const { formatWithCursor } = await import("prettier");
 const code = "'😀😀😀😀'";
 await formatWithCursor(code, {parser: "babel", cursorOffset: 9})
 
-// Prettier stable
+# Prettier stable
+$ node test.js
 { formatted: '"😀😀😀😀";\n', cursorOffset: 5, comments: [] }
 
-// Prettier main
+# Prettier main
+$ node test.js
 { formatted: '"😀😀😀😀";\n', cursorOffset: 9, comments: [] }
 ```
