--- a/changelog_unreleased/javascript/13340.md
+++ b/changelog_unreleased/javascript/13340.md
@@ -1,4 +1,4 @@
-#### Fix range format for files contains emoji (#13340 by @fisker)
+#### Fix cursor positioning for files containing emoji (#13340 by @fisker)
 
 ```console
 $ cat test.js
