--- a/changelog_unreleased/javascript/13274.md
+++ b/changelog_unreleased/javascript/13274.md
@@ -1,4 +1,4 @@
-#### Fix line breaks in multiline strings aren't replaced with literalline and confuse fits (#13274 by @GlebDolzhikov)
+#### Fix inconsistent formatting for multiline strings (#13274 by @GlebDolzhikov)
 
 <!-- prettier-ignore -->
 ```jsx
