--- a/changelog_unreleased/api/17166.md
+++ b/changelog_unreleased/api/17166.md
@@ -4,51 +4,50 @@
 
 ```js
 // `URL`
-await prettier.check('foo', {
-  parser: 'my-cool-parser',
-  plugins: [new URL("./path/to/plugin.js", import.meta.url)]
+await prettier.check("foo", {
+  parser: "my-cool-parser",
+  plugins: [new URL("./path/to/plugin.js", import.meta.url)],
 });
-await prettier.format('foo', {
-  parser: 'my-cool-parser',
-  plugins: [new URL("./path/to/plugin.js", import.meta.url)]
+await prettier.format("foo", {
+  parser: "my-cool-parser",
+  plugins: [new URL("./path/to/plugin.js", import.meta.url)],
 });
-await prettier.formatWithCursor('foo', {
-  parser: 'my-cool-parser',
+await prettier.formatWithCursor("foo", {
+  parser: "my-cool-parser",
   cursorOffset: 2,
-  plugins: [new URL("./path/to/plugin.js", import.meta.url)]
+  plugins: [new URL("./path/to/plugin.js", import.meta.url)],
 });
-await prettier.getFileInfo('/path/to/file', {
-  plugins: [new URL("./path/to/plugin.js", import.meta.url)]
+await prettier.getFileInfo("/path/to/file", {
+  plugins: [new URL("./path/to/plugin.js", import.meta.url)],
 });
 await prettier.getSupportInfo({
-  plugins: [new URL("./path/to/plugin.js", import.meta.url)]
+  plugins: [new URL("./path/to/plugin.js", import.meta.url)],
 });
-await prettier.resolveConfig('/path/to/file'{
-  plugins: [new URL("./path/to/plugin.js", import.meta.url)]
-})
+await prettier.resolveConfig("/path/to/file", {
+  plugins: [new URL("./path/to/plugin.js", import.meta.url)],
+});
 
 // URL string
-
-await prettier.check('foo', {
-  parser: 'my-cool-parser',
-  plugins: ["file:///path/to/plugin.js"]
+await prettier.check("foo", {
+  parser: "my-cool-parser",
+  plugins: ["file:///path/to/plugin.js"],
 });
-await prettier.format('foo', {
-  parser: 'my-cool-parser',
-  plugins: ["file:///path/to/plugin.js"]
+await prettier.format("foo", {
+  parser: "my-cool-parser",
+  plugins: ["file:///path/to/plugin.js"],
 });
-await prettier.formatWithCursor('foo', {
-  parser: 'my-cool-parser',
+await prettier.formatWithCursor("foo", {
+  parser: "my-cool-parser",
   cursorOffset: 2,
-  plugins: ["file:///path/to/plugin.js"]
+  plugins: ["file:///path/to/plugin.js"],
 });
-await prettier.getFileInfo('/path/to/file', {
-  plugins: ["file:///path/to/plugin.js"]
+await prettier.getFileInfo("/path/to/file", {
+  plugins: ["file:///path/to/plugin.js"],
 });
 await prettier.getSupportInfo({
-  plugins: ["file:///path/to/plugin.js"]
+  plugins: ["file:///path/to/plugin.js"],
 });
-await prettier.resolveConfig('/path/to/file'{
-  plugins: ["file:///path/to/plugin.js"]
-})
+await prettier.resolveConfig("/path/to/file", {
+  plugins: ["file:///path/to/plugin.js"],
+});
 ```
