--- a/changelog_unreleased/api/17166.md
+++ b/changelog_unreleased/api/17166.md
@@ -1,6 +1,6 @@
 #### Accept `URL` in `plugins` option (#17166 by @fisker)
 
-`plugins` option now accepts an [URL](https://developer.mozilla.org/en-US/docs/Web/API/URL) with `file:` protocol or a url string starts with `file://` in all public APIs.
+`plugins` option now accepts [URL](https://developer.mozilla.org/en-US/docs/Web/API/URL) with `file:` protocol or url string starts with `file://` in all public APIs.
 
 ```js
 // `URL`
