Update changelog title

--- a/changelog_unreleased/markdown/16596.md
+++ b/changelog_unreleased/markdown/16596.md
@@ -1,4 +1,4 @@
-#### markdown: fix adjacent md syntax in blockqote (#16596 by @fiji-flo)
+#### Fix adjacent md syntax in blockqote (#16596 by @fiji-flo)
 
 <!-- prettier-ignore -->
 ```md
