--- a/changelog_unreleased/markdown/17143.md
+++ b/changelog_unreleased/markdown/17143.md
@@ -1,4 +1,4 @@
-#### Fix strong emph (#17143 by @fiji-flo)
+#### Fix strong emphasis (#17143 by @fiji-flo)
 
 Most markdown implementations don't support `1**_2_**3` so prefer `1***2**3`.
 
