--- a/changelog_unreleased/api/17178.md
+++ b/changelog_unreleased/api/17178.md
@@ -1,4 +1,4 @@
-#### Stop interpret \*.frag files as JavaScript files (#XXXX by @user)
+#### Stop interpret `*.frag` files as JavaScript files (#17178 by @fisker)
 
 `*.frag` was interpreted as JavaScript files, but `.frag` is also used in GLSL([OpenGL Shading Language](https://en.wikipedia.org/wiki/OpenGL_Shading_Language)). It causes error when Prettier try to format them as JavaScript files.
 
