--- a/changelog_unreleased/javascript/17190.md
+++ b/changelog_unreleased/javascript/17190.md
@@ -2,7 +2,7 @@
 
 There is a inconsistency when formatting member expression where the object is a number before Prettier main.
 
-When using `babel` parser(and other Babel based parsers), we'll print number as unparenthesized, when using `typescript` parser(and other ESTree parsers), we print it as parenthesized.
+When using `babel` parser(and other Babel based parsers), we print the number as unparenthesized, when using `typescript` parser(and other ESTree parsers), we print it as parenthesized.
 
 Technically parentheses are not needed, but if we print it as `1?.toString()` and later users realizes it's unnecessary to use `?.`, users can't simply remove the question mark because `1.toString()` will raise a `SyntaxError`, for this reason, we decide to put parentheses around it.
 
