--- a/changelog_unreleased/misc/17254.md
+++ b/changelog_unreleased/misc/17254.md
@@ -24,10 +24,10 @@
   }
 ```
 
-// Prettier stable
+<!-- Prettier stable -->
 Error: There are too many 'cursor' in doc.
 
-// Prettier main
+<!-- Prettier main -->
 # Angular note
 
 ```typescript
