--- a/changelog_unreleased/markdown/16596.md
+++ b/changelog_unreleased/markdown/16596.md
@@ -1,4 +1,4 @@
-#### Fix adjacent md syntax in blockquote (#16596 by @fiji-flo)
+#### Fix adjacent markdown syntax in blockquote (#16596 by @fiji-flo)
 
 <!-- prettier-ignore -->
 ```md
