--- a/changelog_unreleased/json/17269.md
+++ b/changelog_unreleased/json/17269.md
@@ -1,4 +1,4 @@
-### Allow format comment-only JSONC files (#17269 by @fisker)
+#### Allow format comment-only JSONC files (#17269 by @fisker)
 
 <!-- prettier-ignore -->
 ```jsonc
