--- a/changelog_unreleased/angular/17280.md
+++ b/changelog_unreleased/angular/17280.md
@@ -1,4 +1,4 @@
-#### Do not add colon after track in angular @for control-flow (#17280 by @claudio-herger)
+#### Remove extra colon after `track` in angular `@for` control-flow (#17280 by @claudio-herger)
 
 <!-- prettier-ignore -->
 ```angular
