--- a/changelog_unreleased/api/17331.md
+++ b/changelog_unreleased/api/17331.md
@@ -1,6 +1,8 @@
 #### Add `isSupported` function support for `languages` API (#17331 by @JounQin)
 
-Previously, `languages` API for custom plugin only supported to infer parser based on base `filename`, only exactly matched `filename` is supported. This PR added `isSupported` function with `file: string` as parameter to check if the `file` is supported by the plugin, `file` could be plain string path or url string like `file:///C:/test.txt`.
+Previously, `languages` API for custom plugin only supported to infer parser based on the file basename or extension.
+
+Prettier main added `isSupported: (file: string) => boolean` function to allow plugin check if file is supported based on the full path (eg: files in a specific directory), the `file` parameter could be a normal path or a url string like `file:///C:/test.txt`.
 
 ```js
 export const languages = [
