--- a/changelog_unreleased/api/17331.md
+++ b/changelog_unreleased/api/17331.md
@@ -4,6 +4,8 @@ Previously, `languages` API for custom plugin only supported to infer parser bas
 
 Prettier main added `isSupported: (file: string) => boolean` function to allow plugin check if file is supported based on the full path (eg: files in a specific directory), the `file` parameter could be a normal path or a url string like `file:///C:/test.txt`.
 
+If no `isSupported` provided, it just behaviors the same way as before.
+
 ```js
 export const languages = [
   {
