--- a/changelog_unreleased/api/17344.md
+++ b/changelog_unreleased/api/17344.md
@@ -2,7 +2,7 @@
 
 Individual files can now opt out of formatting via `@noformat` or `@noprettier` "pragma" comments at the top of the file.
 
-Use the new option `--check-ignore-pragma` (`checkIgnorePragma` via configuration / API) to enable support for this feature.
+Use the new option `--check-ignore-pragma` (`checkIgnorePragma` via configuration or API) to enable support for this feature.
 
 Language plugins can [implement support](https://prettier.io/docs/plugins#parsers) for this feature. Most built-in parsers were updated to support this feature already, including JavaScript (TypeScript), CSS, HTML, JSON, Markdown (MDX), YAML, and GraphQL.
 
