--- a/changelog_unreleased/api/17344.md
+++ b/changelog_unreleased/api/17344.md
@@ -12,7 +12,7 @@ Language plugins can [implement support](https://prettier.io/docs/plugins#parser
  * @noformat
  */
 
-export matrix(
+export default matrix(
   1, 0, 0,
   0, 1, 0,
   0, 0, 1
