--- a/changelog_unreleased/api/17344.md
+++ b/changelog_unreleased/api/17344.md
@@ -2,9 +2,9 @@
 
 Individual files can now opt out of formatting via `@noformat` or `@noprettier` "pragma" comments at the top of the file.
 
-To enable support for this feature, use the new option [`--check-ignore-pragma`](https://prettier.io/docs/options#check-ignore-pragma) (`checkIgnorePragma` via configuration or API).
+To enable this feature, use the new option [`--check-ignore-pragma`](https://prettier.io/docs/options#check-ignore-pragma) (`checkIgnorePragma` via configuration or API).
 
-Language plugins can [implement support](https://prettier.io/docs/plugins#parsers) for this feature. Most built-in parsers, including JavaScript (TypeScript), CSS, HTML, JSON, Markdown (MDX), YAML, and GraphQL, were already updated to support this feature.
+Language plugins can [implement support](https://prettier.io/docs/plugins#parsers) for this feature. Most built-in parsers, including JavaScript (TypeScript), CSS, HTML, JSON, Markdown (MDX), YAML, and GraphQL, were updated to support this feature.
 
 <!-- prettier-ignore -->
 ```jsx
