--- a/changelog_unreleased/mjml/17400.md
+++ b/changelog_unreleased/mjml/17400.md
@@ -1,4 +1,4 @@
-### Correctly parse `<mj-style>` and `<mj-raw>` (#17400 by @fisker)
+#### Correctly parse `<mj-style>` and `<mj-raw>` (#17400 by @fisker)
 
 <!-- prettier-ignore -->
 ```html
