--- a/changelog_unreleased/mjml/17338.md
+++ b/changelog_unreleased/mjml/17338.md
@@ -1,6 +1,4 @@
-#### Title (#17338 by @iryusa)
-
-Enabling CSS formating within mj-style tag
+#### Enabling CSS formatting within `<mj-style>` tag (#17338 by @iryusa)
 
 <!-- prettier-ignore -->
 ```mjml
@@ -18,8 +16,6 @@ font-size:12px;
   .hello { color: blue; border: 1px solid blue; font-size:12px; } p { font-size:
   14px; }
 </mj-style>
-
-
 
 <!-- Prettier main -->
 <mj-style>
