--- a/changelog_unreleased/javascript/17470.md
+++ b/changelog_unreleased/javascript/17470.md
@@ -1,4 +1,4 @@
-#### Fix inconsistent member chain print (#17470 by @fisker)
+#### Fix inconsistent member chain format (#17470 by @fisker)
 
 <!-- prettier-ignore -->
 ```jsx
