--- a/changelog_unreleased/javascript/17469.md
+++ b/changelog_unreleased/javascript/17469.md
@@ -1,4 +1,4 @@
-#### Fix inconsistent assignment print (#17469 by @fisker)
+#### Fix inconsistent assignment format (#17469 by @fisker)
 
 <!-- prettier-ignore -->
 ```jsx
