--- a/changelog_unreleased/api/17331.md
+++ b/changelog_unreleased/api/17331.md
@@ -2,7 +2,15 @@
 
 Previously, `languages` API for custom plugin only supported to infer parser based on the file basename or extension.
 
-Prettier main added `isSupported: (file: string) => boolean` function to allow plugin check if file is supported based on the full path (eg: files in a specific directory), the `file` parameter could be a normal path or a url string like `file:///C:/test.txt`.
+Prettier main added `isSupported: ({ filepath: string }) => boolean` function to allow plugin check if file is supported based on the full path (eg: files in a specific directory).
+
+:::note
+
+Prettier can not ensure that `filepath` exists on disk.
+
+When using from APIs(eg: `prettier.format()`), Prettier can not ensure it's an absolute path either.
+
+:::
 
 If no `isSupported` provided, it just behaviors the same way as before.
 
@@ -11,7 +19,7 @@ export const languages = [
   {
     name: "foo",
     parsers: ["foo"],
-    isSupported: (file) => file.includes(".foo"),
+    isSupported: ({ filepath }) => filepath.includes(".foo"),
   },
 ];
 ```
