--- a/changelog_unreleased/api/17331.md
+++ b/changelog_unreleased/api/17331.md
@@ -1,4 +1,4 @@
-#### Add `isSupported` function support for `languages` API (#17331 by @JounQin)
+#### Add `isSupported` function support for `languages` API (#17331 by @JounQin, #17490 by @fisker)
 
 Previously, `languages` API for custom plugin only supported to infer parser based on the file basename or extension.
 
