Update PR number in changelog entry

--- a/changelog_unreleased/javascript/17494.md
+++ b/changelog_unreleased/javascript/17494.md
@@ -1,4 +1,4 @@
-#### Fix starred block comments in JSX expressions (TBD by @wchargin)
+#### Fix starred block comments in JSX expressions (#17494 by @wchargin)
 
 <!-- prettier-ignore -->
 ```jsx
