--- a/changelog_unreleased/api/17331.md
+++ b/changelog_unreleased/api/17331.md
@@ -7,7 +7,7 @@ Prettier main added `isSupported: ({ filepath: string }) => boolean` function to
 :::note
 
 Prettier can not ensure that `filepath` exists on disk.\
-When using from APIs(eg: `prettier.format()`), Prettier can not ensure it's an absolute path either.
+When using from APIs(eg: `prettier.format()`), Prettier can not ensure it's a valid path either.
 
 :::
 
