--- a/changelog_unreleased/markdown/16637.md
+++ b/changelog_unreleased/markdown/16637.md
@@ -1,6 +1,4 @@
-#### fix markdown inserts unexpected newline in lists in Markdown (#16637 by @byplayer)
-
-Fix markdown insert unexpected newline in lists.
+#### Fix markdown inserts unexpected newline in lists (#16637 by @byplayer)
 
 <!-- prettier-ignore -->
 ```md
