--- a/changelog_unreleased/html/17501.md
+++ b/changelog_unreleased/html/17501.md
@@ -1,4 +1,4 @@
-#### Fix formatting when tag name is an object prototype property (#XXXX by @user)
+#### Fix formatting when tag name is an object prototype property (#17501 by @fisker)
 
 <!-- prettier-ignore -->
 ```html
