--- a/changelog_unreleased/cli/12221.md
+++ b/changelog_unreleased/cli/12221.md
@@ -1,7 +1,6 @@
-#### Cli now throws an error if both config and no-config arguments are passed (#12221 by @Balastrong)
+#### Forbid use `--config` and `--no-config` together (#12221 by @Balastrong)
 
-<!-- prettier-ignore -->
-```cli
-prettier --config=abc --no-config .
-^ This throws an error
+```console
+$ prettier --config=.prettierrc --no-config .
+[error] Cannot use --no-config and --config together.
 ```
