--- a/changelog_unreleased/cli/17505-2.md
+++ b/changelog_unreleased/cli/17505-2.md
@@ -1,6 +1,6 @@
 #### Fix result message for files can not be formatted (#17505 by @fisker)
 
-```sh
+```console
 touch unknown
 prettier --check unknown
 
