--- a/changelog_unreleased/cli/17505.md
+++ b/changelog_unreleased/cli/17505.md
@@ -1,6 +1,6 @@
 #### Fix exitCode when parser can not infer (#17505 by @fisker)
 
-```sh
+```console
 touch unknown
 prettier --check unknown > /dev/null;echo $?
 
