--- a/changelog_unreleased/api/17549.md
+++ b/changelog_unreleased/api/17549.md
@@ -14,7 +14,7 @@ export const languages = [
 
 ```js
 // prettier.config.js
-import prettierPluginFoo from "prettier-plugin-foo";
+import * as prettierPluginFoo from "prettier-plugin-foo";
 
 export default {
   plugins: [prettierPluginFoo],
