--- a/changelog_unreleased/json/17563.md
+++ b/changelog_unreleased/json/17563.md
@@ -1,4 +1,4 @@
-#### Don't use trailing commas in jsonc (#XXXX by @pdavies)
+#### Don't use trailing commas in jsonc (#17563 by @pdavies)
 
 Don't use trailing commas in JSONC files, as they are not valid JSONC.
 
