--- a/changelog_unreleased/api/17549.md
+++ b/changelog_unreleased/api/17549.md
@@ -1,4 +1,4 @@
-#### Allow plugin to override builtin parsers (#17549 by @fisker)
+#### Allow plugin to override builtin parsers when inferring parser (#17549 by @fisker)
 
 Previously when inferring parser for file, builtin plugins are checked first, so plugins are not able to override parsers for files like `.js`.
 
