--- a/changelog_unreleased/javascript/17491.md
+++ b/changelog_unreleased/javascript/17491.md
@@ -1,4 +1,4 @@
-#### Support type cast comments for acorn parser (#17491 by @ArnaudBarre)
+#### Support type cast comments for `acorn` and `espree` parser (#17491, #17566 by @ArnaudBarre, #17587 by #fisker)
 
 This was previously only supported by the Babel parser.
 
@@ -7,9 +7,9 @@ This was previously only supported by the Babel parser.
 // Input
 /** @type {MyType} */ (x).foo;
 
-// Prettier stable (--parser=acorn)
+// Prettier stable (--parser=acorn or --parser=espree)
 /** @type {MyType} */ x.foo;
 
-// Prettier main (--parser=acorn)
+// Prettier main
 /** @type {MyType} */ (x).foo;
 ```
