--- a/changelog_unreleased/javascript/17491.md
+++ b/changelog_unreleased/javascript/17491.md
@@ -1,4 +1,4 @@
-#### Support type cast comments for `acorn` and `espree` parser (#17491, #17566 by @ArnaudBarre, #17587 by #fisker)
+#### Support type cast comments for `acorn`, `espree`, and `meriyah` parser (#17491, #17566 by @ArnaudBarre, #17587 by #fisker, #17600 by #fisker)
 
 This was previously only supported by the Babel parser.
 
@@ -7,7 +7,7 @@ This was previously only supported by the Babel parser.
 // Input
 /** @type {MyType} */ (x).foo;
 
-// Prettier stable (--parser=acorn or --parser=espree)
+// Prettier stable (--parser=acorn|espree|meriyah)
 /** @type {MyType} */ x.foo;
 
 // Prettier main
