--- a/changelog_unreleased/javascript/17491.md
+++ b/changelog_unreleased/javascript/17491.md
@@ -1,4 +1,4 @@
-#### Support type cast comments for `acorn`, `espree`, and `meriyah` parser (#17491, #17566 by @ArnaudBarre, #17587 by #fisker, #17600 by #fisker)
+#### Support type cast comments for `acorn`, `espree`, and `meriyah` parser (#17491, #17566 by @ArnaudBarre, #17587, #17600 by #fisker)
 
 This was previously only supported by the Babel parser.
 
