--- a/changelog_unreleased/javascript/17491.md
+++ b/changelog_unreleased/javascript/17491.md
@@ -10,6 +10,6 @@ This was previously only supported by the Babel parser.
 // Prettier stable (--parser=acorn|meriyah)
 /** @type {MyType} */ x.foo;
 
-// Prettier main (--parser=acorn)
+// Prettier main
 /** @type {MyType} */ (x).foo;
 ```
