--- a/changelog_unreleased/yaml/16074.md
+++ b/changelog_unreleased/yaml/16074.md
@@ -5,62 +5,23 @@
 # Input
 ---
 myDict: {}
-  # exampleKey1: value
-  # exampleKey2: value
-
+  # comment
 myList: []
-  # - name: example
-  #   value: example
-
-myOtherMap:
-  1: example
-  2: example
-  # 3: example
-
-myOtherList:
-  - example1
-  - example2
-  # - example3
+  # comment
 
 # Prettier stable
 ---
 myDict:
   {}
-  # exampleKey1: value
-  # exampleKey2: value
-
+  # comment
 myList:
   []
-  # - name: example
-  #   value: example
-
-myOtherMap:
-  1: example
-  2: example
-  # 3: example
-
-myOtherList:
-  - example1
-  - example2
-  # - example3
+  # comment
 
 # Prettier main
 ---
 myDict: {}
-  # exampleKey1: value
-  # exampleKey2: value
-
+  # comment
 myList: []
-  # - name: example
-  #   value: example
-
-myOtherMap:
-  1: example
-  2: example
-  # 3: example
-
-myOtherList:
-  - example1
-  - example2
-  # - example3
+  # comment
 ```
