--- a/changelog_unreleased/cli/17151.md
+++ b/changelog_unreleased/cli/17151.md
@@ -1,4 +1,4 @@
-#### Support experimental CLI (#17151, #17396 by @fisker)
+#### [HIGHLIGHT] Support experimental CLI (#17151, #17396 by @fisker)
 
 You may already heard or used our new [performance improved CLI](https://prettier.io/blog/2023/11/30/cli-deep-dive). From prettier main, you can use it without installing unstable v4 version.
 
