--- a/changelog_unreleased/flow/17520.md
+++ b/changelog_unreleased/flow/17520.md
@@ -19,7 +19,7 @@ This plugin include a new parser `hermes` (Flow syntax), to use this plugin:
 
 Due to package size limitation, this plugin is not included in `prettier`, it needs to be installed separately.
 
-**We plan to make this as the default parser for Flow syntax in v4, in v4 we'll also remove `babel-flow` parser, please give it a try.**
+**We plan to make this as the default parser for Flow syntax support in v4, we'll also remove `babel-flow` parser in v4, please give it a try.**
 
 For more information, check [the package homepage](https://github.com/prettier/prettier/tree/main/packages/plugin-hermes).
 
