--- a/changelog_unreleased/javascript/17472.md
+++ b/changelog_unreleased/javascript/17472.md
@@ -21,4 +21,5 @@ Due to package size limitation, this plugin is not included in `prettier`, it ne
 
 For more information, check [the package homepage](https://github.com/prettier/prettier/tree/main/packages/plugin-oxc).
 
-Many thanks to the OXC team(@boshen, @overlookmotel and other contributors).
+<!-- spell-checker: disable-next-line-->
+Many thanks to the OXC team(@boshen, @overlookmotel, and other contributors).
