--- a/changelog_unreleased/javascript/17472.md
+++ b/changelog_unreleased/javascript/17472.md
@@ -17,7 +17,7 @@ This plugin include two new parser `oxc` (JavaScript syntax) and `oxc-ts` (TypeS
      - "@prettier/plugin-oxc"
    ```
 
-Due to package size limitation, this plugin is not included in `prettier`, it needs to be installed separately.
+Due to package size limitation, this plugin is not included in the `prettier` package, it needs to be installed separately.
 
 For more information, check [the package homepage](https://github.com/prettier/prettier/tree/main/packages/plugin-oxc).
 
