--- a/changelog_unreleased/flow/17520.md
+++ b/changelog_unreleased/flow/17520.md
@@ -1,4 +1,4 @@
-#### [HIGHLIGHT] Added a new official plugins `@prettier/plugin-hermes` (#17520 by @fisker)
+#### [HIGHLIGHT] Added a new official plugin `@prettier/plugin-hermes` (#17520 by @fisker)
 
 `@prettier/plugin-hermes` is based on [Hermes JS Engine](https://github.com/facebook/hermes/blob/main/README.md).
 
