--- a/changelog_unreleased/javascript/17472.md
+++ b/changelog_unreleased/javascript/17472.md
@@ -1,4 +1,4 @@
-#### [HIGHLIGHT] Added a new official plugins `@prettier/plugin-oxc` (#17472, #17483 by @fisker)
+#### [HIGHLIGHT] Added a new official plugin `@prettier/plugin-oxc` (#17472, #17483 by @fisker)
 
 `@prettier/plugin-oxc` is based on [OXC](https://oxc.rs/)(A **fast** JavaScript and TypeScript parser in Rust).
 
