--- a/changelog_unreleased/flow/17520.md
+++ b/changelog_unreleased/flow/17520.md
@@ -10,7 +10,7 @@ This plugin include a new parser `hermes` (Flow syntax), to use this plugin:
    yarn add --dev prettier @prettier/plugin-hermes
    ```
 
-2. add the following to your `.prettierrc`
+2. Add the following to your `.prettierrc` file
 
    ```yaml
    plugins:
