--- a/changelog_unreleased/javascript/17472.md
+++ b/changelog_unreleased/javascript/17472.md
@@ -10,7 +10,7 @@ This plugin include two new parser `oxc` (JavaScript syntax) and `oxc-ts` (TypeS
    yarn add --dev prettier @prettier/plugin-oxc
    ```
 
-2. add the following to your `.prettierrc`
+2. Add the following to your `.prettierrc` file
 
    ```yaml
    plugins:
